--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,8 @@ stages:          # List of stages for jobs, and their order of execution
 build-job:       # This job runs in the build stage, which runs first.
   image: openjdk:17-jdk
   stage: build
+  before_script:
+    - chmod +x ./gradlew
   script:
     - ./gradlew clean
     - ./gradlew build
