--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,8 @@ build-job:       # This job runs in the build stage, which runs first.
 unit-test-job:   # This job runs in the test stage.
   image: openjdk:17-jdk
   stage: test    # It only starts when the job in the build stage completes successfully.
+  before_script:
+    - chmod +x ./gradlew
   script:
     - ./gradlew test
 
