--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,7 @@ package-job:
   services:
     - docker:dind
   before_script:
+    - export DOCKER_CLI_ACI=1
     #- docker login -u $DOCKER_HUB_USER --password-stdin < $DOCKER_HUB_PW
     - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PW
   script:
