--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ package-job:
   services:
     - docker:dind
   before_script:
-    - docker login -u $DOCKER_HUB_USER --password-stdin < $DOCKER_HUB_PW
+    - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PW
   script:
     - docker build -t $IMAGE_NAME
     - docker push $IMAGE_NAME
