--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ package-job:
   services:
     - docker:dind
   before_script:
-    - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PW
+    - docker login -u hoyoon -p sks897867!
   script:
     - docker build -t $IMAGE_NAME
     - docker push $IMAGE_NAME
@@ -66,7 +66,7 @@ deploy-job:      # This job runs in the deploy stage.
   tags: # gitlab-Runner TAG
     - 16_6_BE_TAG
   before_script:
-    - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PW
+    - docker login -u hoyoon -p sks897867!
   script:
     - docker stop be-con || true
     - docker rm -f be-con || true
