--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,9 +43,6 @@ unit-test-job:   # This job runs in the test stage.
   script:
     - ./gradlew test
 
-variables:
-  IMAGE_NAME: $CI_REGISTRY_IMAGE:latest
-
 package-job:
   image: docker:latest
   stage: package
@@ -54,8 +51,8 @@ package-job:
   before_script:
     - docker login -u hoyoon -p sks897867!
   script:
-    - docker build -t $IMAGE_NAME
-    - docker push $IMAGE_NAME
+    - docker build -t 16_6_BE
+    - docker push 16_6_BE
   after_script:
     - docker logout
   only:
@@ -66,14 +63,14 @@ deploy-job:      # This job runs in the deploy stage.
   tags: # gitlab-Runner TAG
     - 16_6_BE_TAG
   before_script:
-    - docker login -u hoyoon -p sks897867!
+    - docker login -u hoyoon -p dckr_pat_VbrziuD3iT_0tnPLr0MOR1F8wv8
   script:
     - docker stop be-con || true
     - docker rm -f be-con || true
-    - docker rmi $IMAGE_NAME || true
+    - docker rmi 16_6_BE || true
     #- docker run -d --restart always -p 8080:8080/tcp --name A A/B
-    - docker pull $IMAGE_NAME
-    - docker run --name be-con -p 8080:8080 -d $IMAGE_NAME
+    - docker pull 16_6_BE
+    - docker run --name be-con -p 8080:8080 -d 16_6_BE
 
   after_script:
     - docker logout
