--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ package-job:
 deploy-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   tags: # gitlab-Runner TAG
-    - 16_6_BE_TAG
+    - 16_6_be_tag
   before_script:
     - docker login -u hoyoon -p dckr_pat_eZhgraJvrKZYztYxewLGHsYiYEM
   script:
