--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Java CI with Gradle Docker
 
 on:
   push:
@@ -26,23 +26,29 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        
-    ## gradle build
-    - name: Build with Gradle
-      run: ./gradlew bootJar
 
-    ## 웹 이미지 빌드 및 도커허브에 push
-    - name: web docker build and push
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Build with Gradle
+      run: ./gradlew build -x test
+
+    - name: Docker build
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker build -t ${{ secrets.DOCKER_REPO }}/jagiyadocker .
         docker push ${{ secrets.DOCKER_REPO }}/jagiyadocker
 
-    # 서버에서 Docker 이미지 실행
-    - name: Docker Run
-      run: |
-        docker stop be-con || true
-        docker rm -f be-con || true
-        docker rmi $(docker images -f "dangling=true" -q) || true
-        docker pull ${{ secrets.DOCKER_REPO }}/jagiyadocker:latest
-        docker run --name be-con -p 8080:8080 -d ${{ secrets.DOCKER_REPO }}/jagiyadocker:latest
+    - name: Deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }} # EC2 인스턴스 퍼블릭 DNS
+        username: ec2-user
+        key: ${{ secrets.PRIVATE_KEY }} # pem 키
+        # 도커 작업
+        script: |
+          docker stop be-con || true
+          docker rm -f be-con || true
+          docker rmi $(docker images -f "dangling=true" -q) || true
+          docker pull ${{ secrets.DOCKER_REPO }}/jagiyadocker:latest
+          docker run --name be-con -p 8080:8080 -d ${{ secrets.DOCKER_REPO }}/jagiyadocker:latest
