--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
         format_sql: true
 
   datasource:
-    url: jdbc:mariadb://192.168.219.105:3306/DEV
+    url: jdbc:mysql://101.101.210.91:3306/DEV
     username: DEV_USER
     password: DEV_USER
-    driver-class-name: org.mariadb.jdbc.Driver
+    driver-class-name: org.mysql.cj.jdbc.Driver
