--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,5 +15,5 @@ spring:
   datasource:
     url: jdbc:mysql://101.101.210.91:3306/DEV
     username: DEV_USER
-    password: DEV_USER
-    driver-class-name: org.mysql.cj.jdbc.Driver
+    password: pass@word1
+    driver-class-name: com.mysql.cj.jdbc.Driver
